kasten/kasten-generate-example-backup-policy/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kasten-generate-example-backup-policy-test
policies:
- ../kasten-generate-example-backup-policy.yaml
resources:
- test-resource.yaml
results:
- generatedResource: generatedResource.yaml
  kind: Deployment
  policy: kasten-generate-example-backup-policy
  resources:
  - test-deployment
  result: pass
  rule: kasten-generate-example-backup-policy
variables: test-values.yaml
